safe file deletion

--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -27,30 +27,33 @@ Once you have got that, a new project will be launched.
 Here is the structure of this project:
 
 ```{r 08-step-by-step-prototype-2, echo=FALSE}
-fs::file_delete(
-  fs::path(
-    here::here("golex"), 
-    "inst/app/www/plop.js"
+try({
+  fs::file_delete(
+    fs::path(
+      here::here("golex"), 
+      "inst/app/www/plop.js"
+    )
   )
-)
-fs::file_delete(
-  fs::path(
-    here::here("golex"), 
-    "inst/app/www/script.js"
+  fs::file_delete(
+    fs::path(
+      here::here("golex"), 
+      "inst/app/www/script.js"
+    )
   )
-)
-fs::file_delete(
-  fs::path(
-    here::here("golex"), 
-    "inst/app/www/custom.css"
+  fs::file_delete(
+    fs::path(
+      here::here("golex"), 
+      "inst/app/www/custom.css"
+    )
   )
-)
-fs::file_delete(
-  fs::path(
-    here::here("golex"), 
-    "R/mod_my_first_module.R"
+  fs::file_delete(
+    fs::path(
+      here::here("golex"), 
+      "R/mod_my_first_module.R"
+    )
   )
-)
+})
+
 ```
 
 
@@ -163,7 +166,7 @@ golem::add_module(name = "my_first_module")
 ```{r 08-step-by-step-prototype-10, echo = FALSE}
 golem::add_module(name = "my_first_module", here::here("golex"), open = FALSE) 
 ```
- 
+
 The new file will contain:
 
 ```{r 08-step-by-step-prototype-11, echo = FALSE, comment=""}
