added app examples

--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -83,7 +83,7 @@ In the next section, you will be introduced to two packages that can be used whe
 When prototyping the UI for an application, we will not be focusing on building the actual computation: what we need is creating a draft with visual components, so that we can have visual clues about the end result. 
 To do that, you can use the `{shinipsum}` package, which has been designed to generate random `{shiny}` [@R-shiny] elements.
 If you are familiar with "lorem ipsum", the fake text generator that is used in software design as a placeholder for text, the idea is the same: generating placeholders for `{shiny}` outputs. 
-For an example of an application built with `{shinipsum}`, please visit [engineering-shiny.org/shinipsum/](https://engineering-shiny.org/shinipsum/).
+For an example of an application built with `{shinipsum}`, please visit [engineering-shiny.org/shinipsum/](https://engineering-shiny.org/shinipsum/), or [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/): both these applications should look a little bit different every time you open them!
 
 `{shinipsum}` can be installed from CRAN with:
 
