--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -75,7 +75,7 @@ External resources are linked all throughout this chapter and at the end if you 
 ### About JavaScript
 
 JavaScript is a programming language which has been designed to work in the browser
-^[You can now work with JavaScript in a server with Node.JS, but this is out of scope of this book. See linked resources to learn more.]
+^[You can now work with JavaScript in a server with Node.JS, but this won't be a useful software when working with `{shiny}`. See linked resources to learn more.]
 .
 To play with a JavaScript console, the fastest way is to open your favorite web browser, and to open the developer tools. 
 In Google Chrome, it's available under View > Developer > Developer Tools. 
