--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -272,7 +272,7 @@ Here are some:
 
 + `{shinydashboardPlus}` [@R-shinydashboardPlus], extensions for shinydashboard.
 
-+ `{bs4Dash}` [@R-bs4Dash], Bootstrap 4 shinydashboard using AdminLTE3.
++ `{bs4Dash}` [@R-bs4Dash], Bootstrap 4 shinydashboard using AdminLTE3: an example if available at [engineering-shiny.org/bs4dashdemo/](https://engineering-shiny.org/bs4dashdemo/)
 
 + `{fullPage}`[@R-fullPage], fullPage.js, pagePiling.js and multiScroll.js for shiny.
 
