--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -176,6 +176,8 @@ Just as with their server counterparts, the UI side of these elements are the on
 By default, `{golem}` uses a `fluidPage()`, which is `{shiny}` [@R-shiny] most commonly used template. 
 If ever you want to use `navBarPage()`, this is where you will define this: replace one with the other, and you will be good to go. 
 You can also define any other template page, for example with an `htmlTemplate()`. 
+For an example of an application built using an `htmlTemplate`, please visit [engineering-shiny.org/graysacle/](https://engineering-shiny.org/graysacle/), or [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/): both these applications are built on top of an external html template. 
+
 If you're tempted to do that, be aware that `fluidPage()` come with a series of CSS/JS elements, and if you plan on not using a default `{shiny}` `*Page()` function, you will need to add your own CSS. 
 
 ```{r 04-golem-12, echo = FALSE}
