--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -967,6 +967,8 @@ If ever you are free to choose any database as a backend, your choice should be 
 For example, SQL databases are designed to store tabular data, and they tend to be very fast when it comes to reading data: so if you have one or more large data.frames you want to use inside your application, and with no specific update of these data, an SQL backend can be  the perfect choice. 
 On the other hand, a NoSQL database like MongoDB will be faster when it comes to doing write operation, and can store any kind of objects: for example, `{hexmake}` can use a MongoDB backend to store RDS files. 
 But that comes with a price: read are a little bit slower, and you might have to work a little bit more on handling the JSON results that come out of MongoDB.
+Another example of an app that uses on an external database is `{databasedemo}`, available at [engineering-shiny.org/databasedemo/](https://engineering-shiny.org/databasedemo/). 
+Feel free to follow this link for more information about this application!
 
 Covering all the available type of databases and the packages associated with each is a very, very large topic: there are dozens of database systems, and as many (if not more) packages to interact with them. 
 For a more extensive coverage of using databases in R, please follow these resources: 
