--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -100,13 +100,19 @@ Nothing of the like: they should be using this application while developing, so 
 Let's pick two random names for our personas, and two fake companies where they might be working at.
 
 ```{r 19-appendix-2}
-withr::with_seed(
+nms <- withr::with_seed(
   608, {
-    nms <- charlatan::ch_name(2)
-    company <- charlatan::ch_company(2)
+    charlatan::ch_name(2)
+    
   }
 )
 nms
+
+company <- withr::with_seed(
+  608, {
+    charlatan::ch_company(2)
+  }
+)
 company
 ```
 
