--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -99,7 +99,7 @@ Nothing of the like: they should be using this application while developing, so 
 
 Let's pick two random names for our personas, and two fake companies where they might be working at.
 
-```{r 19-appendix-2}
+```{r 19-appendix-2, eval = TRUE}
 nms <- withr::with_seed(
   608, {
     charlatan::ch_name(2)
