--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -139,7 +139,7 @@ Once we have the back-end settled and the UI defined, we will be working on maki
 
 Our back-end will be composed of two functions: 
 
-```{r 19-appendix-3, echo = FALSE}
+```{r 19-appendix-3, echo = FALSE, eval = TRUE}
 library(minifyr)
 minif <- ls("package:minifyr", pattern = "minifyr_js_")
 minif <- paste0("`", minif, "()`")
