--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -4,7 +4,8 @@
 
 # About Successful Shiny Apps {#successfulshinyapp}
 
-> I Too Like to Live Dangerously `r right_align("Austin Powers")`
+> I Too Like to Live Dangerously. 
+> `r tufte::quote_footer('--- Austin Power')`
 
 ## A (very) short introduction to `{shiny}` 
 
@@ -29,7 +30,7 @@ Ready to start engineering production-grade `{shiny}` Apps?
 
 ## What is a Complex `{shiny}` Application? {#complex-shiny}
 
-> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`
+> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`$
 
 ### Reaching the cliff of complexity
 
@@ -69,7 +70,7 @@ This type of complexity is called _implementation complexity_.
 One of the goal of this book is to present a methodology and toolkit that will help you reduce this form of complexity. 
 
 
-#### B. ________Customers and users complexity {-}
+#### B. Customers and users complexity {-}
 
 Customers and end users see complexity as _interface complexity_. 
 
