--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -151,7 +151,7 @@ Small is beautiful.
 Being able to properly cut a codebase into small modules will help developers build a mental model of the application (Remember ["What is a complex `{shiny}` Application?"](#complex-shiny)).
 But what are `{shiny}` modules?
 
-> `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions `r right_link("Modularizing Shiny app code, <shiny.rstudio.com>", "https://shiny.rstudio.com/articles/modules.html")`
+> `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions $`r right_link("Modularizing Shiny app code", "https://shiny.rstudio.com/articles/modules.html")`$
 
 Let us first untangle this quote with an example about the `{shiny}` namespace problem. 
 
