--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -2,7 +2,7 @@
 
 ## Designing before coding
 
-> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and you will wonder why your code bloats and debugging is so hard. `r right_link("The Art of Unix Programming - Attitude Matters Too", "http://www.catb.org/~esr/writings/taoup/html/ch01s09.html")`
+> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and you will wonder why your code bloats and debugging is so hard. $`r right_link("The Art of Unix Programming - Attitude Matters Too", "http://www.catb.org/~esr/writings/taoup/html/ch01s09.html")`$
 
 ### The Urge to Code 
 
@@ -145,7 +145,7 @@ From time to time, you are building a `{shiny}` app on top of an existing code-b
 These kind of projects are often referred to as "brownfield projects", in opposition to "greenfield projects", borrowing the terminology from urban planning: a greenfield project being one where you are building on "evergreen" lands, while a brownfield project is building on lands that were, for example, industrial lands, and which will need to be sanitized, as they potentially contain waste or pollution, constructions need to be destroyed, roads needs to be deviated, and all these things that can make the urban planning process more complex. 
 Then, you can extend this to software engineering, where a greenfield project is the one that start from scratch, and a brownfield project is a one where you need to build on top of an existing code-base, implying that you will need to do some extra work before actually working on the project: 
 
-> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently." `r right_link("The DevOps Handbook", "https://itrevolution.com/book/the-devops-handbook/")`
+> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently." $`r right_link("The DevOps Handbook", "https://itrevolution.com/book/the-devops-handbook/")`$
 
 Depending on how you chose to handle it, starting from a code base that is already written can either be very much helping, or you can be shooting yourself in the foot. 
 Most of the time, `{shiny}` projects are not built as reproducible infrastructures: you will find a series of `library()` calls, no functions structure _per se_, no documentation, and no tests. 
