--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 2: Prototype {-}
 
-# Setting up for success with `{golem}`
+# Setting up for success with `{golem}` (#settingupsuccess)
 
 Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project! 
 This will help you start your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it.
