--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -4,7 +4,7 @@
 
 ### Prototype, then polish
 
-> Prototyping first may help keep you from investing far too much time for marginal gains. `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#rule_of_optimization")`
+> Prototyping first may help keep you from investing far too much time for marginal gains. $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html\\#rule_of_optimization")`$
 
 And yet another Rule from the Art of Unix Programming: "Rule of Optimization: Prototype before polishing. __Get it working before you optimize it__."
 
@@ -30,7 +30,7 @@ But while these kind of abstractions are elegant and optimized, they can make th
 So before focusing on turning something into a function, make it work first. 
 As said in _R for Data Science_ [@hadleywickham2017] about abstraction with `{purrr}` [@R-purrr]: 
 
-> Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!). `r right_link("R for Data Science - 21.5 The map functions", "https://r4ds.had.co.nz/iteration.html")`
+> Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!). $`r right_link("R for Data Science - 21.5 The map functions", "https://r4ds.had.co.nz/iteration.html")`$
 
 As a small example, we can refer to the binding module from `{hexmake}` [@R-hexmake]: this module manipulates namespaces, inputs and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
 That's an elegant solution: instead of duplicating content, we use functions to automatically bind events.
