--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -194,7 +194,7 @@ Note that you can also perform code coverage locally, using the `{covr}` [@R-cov
 code_coverage <- covr::package_coverage()
 ```
 
-For example, figure \@ref(fig:golemcov) is the output of running the `package_coverage()` function on the `{golem}` package on the 2020-04-29 on the `dev` branch: 
+For example, figure \@ref(fig:10-step-by-step-build-11) is the output of running the `package_coverage()` function on the `{golem}` package on the 2020-04-29 on the `dev` branch: 
 
 ```{r 10-step-by-step-build-11, echo=FALSE, fig.cap="`{golem` code coverage results", out.width="100%"}
 knitr::include_graphics("img/golemcov.png")
@@ -206,7 +206,7 @@ For example, in `{golem}`, the `addins.R` file is not tested (0% code coverage),
 Another thing to keep in mind while computing code coverage is that it counts the number of lines that are run when the tests are run, which means that if you write your whole function on one single line, you will have a 100% code coverage. 
 Another example is writing your `if/else` statement on one line `if (this) that else that`: your code coverage will count this line as covered, even if your test suite only runs the `if(this)` and not the `else` ; in other words, even if your code coverage is good here, you are still not testing this algorithm extensively. 
 
-Note that you can also identify files with zero code coverage using the `covr::zero_coverage(covr::package_coverage())` function, which, instead of printing back a metric of coverage for each file, will point to all the lines that are not covered by tests inside your package, as show in figure \@ref(fig:zerocov):
+Note that you can also identify files with zero code coverage using the `covr::zero_coverage(covr::package_coverage())` function, which, instead of printing back a metric of coverage for each file, will point to all the lines that are not covered by tests inside your package, as show in figure \@ref(fig:10-step-by-step-build-12):
 
 ```{r 10-step-by-step-build-12, echo=FALSE, fig.cap="`{golem` files with zero code coverage", out.width="100%"}
 knitr::include_graphics("img/zerocov.png")
@@ -214,7 +214,7 @@ knitr::include_graphics("img/zerocov.png")
 
 To sum up: do not set an arbitrary code coverage percentage goal, but rather use it as a general metric all along your project. 
 With CodeCov, you can get a timeline of the evolution of code coverage: a good tool for judging when you need to write more tests. 
-For example, figure \@ref(fig:codecov-tibble) is the general tendency for the code coverage of the `{tibble}` package over the last 6 months (November 2019 - April 2020): 
+For example, figure \@ref(fig:10-step-by-step-build-13) is the general tendency for the code coverage of the `{tibble}` package over the last 6 months (November 2019 - April 2020): 
 
 ```{r 10-step-by-step-build-13, echo=FALSE, fig.cap="CodeCov.io results for the `{tibble` package", out.width="100%"}
 knitr::include_graphics("img/codecov-tibble.png")
