--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -1,6 +1,6 @@
 # Version Control {#secure}
 
-## Using Version Control with `git`
+## Using Version Control with `git` {#version-control}
 
 "Friends do not let friends work on a coding project without version control." 
 You might have heard this before, without really considering what this means. 
