--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -2,7 +2,7 @@
 
 # The Need for Optimization {#when-optimize}
 
-> Only once we have a solid characterization of the surface area we want to improve can we begin to identify the best way to improve it. `r right_link("Refactoring at Scale", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`
+> Only once we have a solid characterization of the surface area we want to improve can we begin to identify the best way to improve it. $`r right_link("Refactoring at Scale", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`$
 
 ## Build first, then optimize
 
@@ -38,7 +38,7 @@ This is something you will discover only when the application is fully functiona
 
 Or to sum up: 
 
-> Get your design right with an un-optimized, slow, memory-intensive implementation before you try to tune. Then, tune systematically, looking for the places where you can buy big performance wins with the smallest possible increases in local complexity. `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/")`
+> Get your design right with an un-optimized, slow, memory-intensive implementation before you try to tune. Then, tune systematically, looking for the places where you can buy big performance wins with the smallest possible increases in local complexity. $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/")`$
 
 ### Do you need faster functions?
 
@@ -132,7 +132,7 @@ The best way to profile R code is by using the `{profvis}` [@R-profvis] package
 With `{profvis}`, you can spot the bottleneck of your function. 
 Without an automated tool to do the profiling, the developers would have to profile by guessing, which will, most of the time, come with bad results: 
 
-> One of the lessons that the original Unix programmers learned early is that intuition is a poor guide to where the bottlenecks are, even for one who knows the code in question intimately. `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch12s02.html")`
+> One of the lessons that the original Unix programmers learned early is that intuition is a poor guide to where the bottlenecks are, even for one who knows the code in question intimately. $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch12s02.html")`$
 
 Instead of guessing, it is safe bet to go for a tool like `{profvis}`, which allows to have a detailed view of what takes a long time to run in your R code. 
 
@@ -333,7 +333,7 @@ And of course, last but not least, you also got the results of the metrics you h
 Here is a quick introduction to this tool: 
 
 + Open Chrome in incognito mode (File > New Icognito Window^[This mode opens an "anonymous" session, in the sense that you don't have access to your account and extensions, and that the visits will not be recorded in your history.]), so that the page performance is not influenced by any of the installed extensions in your Google Chrome
-+ Open your developer console, either by going to View > Developer > Developer tools, by doing right click > Inspect, or with the keyboard shortcut ctrl/cmd + alt + I, as show in figure \@ref(fig:lighthouseaudit)
++ Open your developer console, either by going to View > Developer > Developer tools, by doing right click > Inspect, or with the keyboard shortcut ctrl/cmd + alt + I, as show in figure \@ref(fig:14-when-optimize-11)
 + Go to the "Audit" tab
 + Configure your report (or leave the default)
 + Click on "Generate Report"
@@ -349,7 +349,7 @@ knitr::include_graphics("img/lighthouse-audit.png")
 ```
 
 
-See figure \@ref(fig:lighthouseres) for a screenshot of the results computed by Google Lighthouse.
+See figure \@ref(fig:14-when-optimize-12) for a screenshot of the results computed by Google Lighthouse.
 
 (ref:lighthouseres) LightHouse audit results
 
