--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -34,7 +34,7 @@ That way, you are getting ready for complexity, and if, one day, you need to tur
 
 ### Develop with the KISS principle
 
-> The KISS principle states that most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided. `r right_link("KISS principle, Wikipedia article", "https://en.wikipedia.org/wiki/KISS_principle")`
+> The KISS principle states that most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided. $`r right_link("KISS principle, Wikipedia article", "https://en.wikipedia.org/wiki/KISS_principle")`$
 
 
 The KISS principle, as "Keep It Simple, Stupid", should drive the implementation of features in the application to allow anyone in the future, including original developers, to take over on the development.
