--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -18,7 +18,7 @@ As you are building a complex, production-grade `{shiny}` application, do not un
 
 ## Simplicity is Gold
 
-> "Simplify, then add lightness." `r right_link('Colin Chapman CBE, Founder of Lotus Cars', 'https://www.lotuscars.com/lotus-philosophy/')`
+> "Simplify, then add lightness." $`r right_link('Colin Chapman CBE, Founder of Lotus Cars', 'https://www.lotuscars.com/lotus-philosophy/')`$
 
 Aiming for simplicity is a hard thing, but some rules will help you build a better UX, paving the way for a successful application.
 
@@ -215,9 +215,7 @@ There is a good chance visitors of the app will already know what is `{ggplot2}`
 
 Also know as "Principle of Least Astonishment."
 
-> Rule of Least Surprise: In interface design, always do the least surprising thing.
-
-`r right_link("'Basic of the Unix Philosophy', Eric Steven Raymond", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id2878339")`
+> Rule of Least Surprise: In interface design, always do the least surprising thing. $`r right_link("'Basic of the Unix Philosophy', Eric Steven Raymond", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html\\#id2878339")`$
 
 When we are browsing the web, we have a series of pre-conception about what things are and what they do. 
 For example, we expect an underline text to be clickable: so there is a good chance that if you use underline text inside your app, the user will try to click on it. 
@@ -268,7 +266,7 @@ Yes, it is subtle, yet the second version of the button is clearer to understand
 Least surprise is crucial to make the user experience a good one: users rarely think that if something is behaving unexpectedly on an app, it is because of the app: they will usually think it is their fault.
 Same goes for the application failing or behaving in an unexpected way: most users think they are "doing it wrong", instead of blaming the designer of the software.
 
-> When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them. They are more likely to feel that they are at fault for not anticipating the page. Don't take advantage of this; making users feel stupid is not endearing. `r right_link("The cranky user: The Principle of Least Astonishment", "https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf")`
+> When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them. They are more likely to feel that they are at fault for not anticipating the page. Don't take advantage of this; making users feel stupid is not endearing. $`r right_link("The cranky user: The Principle of Least Astonishment", "https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf")`$
 
 
 #### B. Thinking about progression {-}
@@ -393,7 +391,7 @@ It is also possible to build your own with a little bit of HTML, CSS and JavaScr
 
 ### What is feature-creep?
 
-> Even more often (at least in the commercial software world) excessive complexity comes from project requirements that are based on the marketing fad of the month rather than the reality of what customers want or software can actually deliver. Many a good design has been smothered under marketing's pile of “checklist features” — features that, often, no customer will ever use. And a vicious circle operates; the competition thinks it has to compete with chrome by adding more chrome. Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love. `r right_link('The Art of Unix Programming', 'http://www.catb.org/~esr/writings/taoup/html/ch01s06.html')`
+> Even more often (at least in the commercial software world) excessive complexity comes from project requirements that are based on the marketing fad of the month rather than the reality of what customers want or software can actually deliver. Many a good design has been smothered under marketing's pile of “checklist features” — features that, often, no customer will ever use. And a vicious circle operates; the competition thinks it has to compete with chrome by adding more chrome. Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love. $`r right_link('The Art of Unix Programming', 'http://www.catb.org/~esr/writings/taoup/html/ch01s06.html')`$
 
 
 Feature-creep is the process of adding features to the app that complexify the usage and the maintenance of the product, to the point that extreme feature-creep can lead to the product being entirely unusable and completely impossible to maintain. 
@@ -480,7 +478,7 @@ Adding interactivity widgets (in most cases) means adding visual elements to you
 
 To sum up, a good rule to live by is that you should not add a feature for the sake of adding a feature. 
 
-> Less is more. `r right_link("Ludwig Mies van der Rohe", "http://www.masterofdetails.fr/mies-van-der-rohe-less-is-more/")`
+> Less is more. $`r right_link("Ludwig Mies van der Rohe", "http://www.masterofdetails.fr/mies-van-der-rohe-less-is-more/")`$
 
 ## Web Accessibility 
 
@@ -492,7 +490,7 @@ A large audience means that there is a chance that your app will be used by peop
 . 
 Web Accessibility deals with the process of making the web available to people with disabilities.
 
-> The Web is fundamentally designed to work for all people, whatever their hardware, software, language, location, or ability. When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability. `r right_link("Accessibility in Context - The Web Accessibility Initiative", "https://www.w3.org/WAI/fundamentals/accessibility-intro/")`
+> The Web is fundamentally designed to work for all people, whatever their hardware, software, language, location, or ability. When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability. $`r right_link("Accessibility in Context - The Web Accessibility Initiative", "https://www.w3.org/WAI/fundamentals/accessibility-intro/")`$
 
 When learning to code a web app through "canonical" courses, you will be introduced to web Accessibility very early.
 For example, you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/). 
