--- a/13-deploy-with-golem.Rmd
+++ b/13-deploy-with-golem.Rmd
@@ -2,7 +2,7 @@
 
 # Deploy your application {#deploy-golem}
 
-> Your deploys should be as boring, straightforward, and stress-free as possible. `r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`
+> Your deploys should be as boring, straightforward, and stress-free as possible. $`r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`$
 
 Once your app is built, you are ready to deploy it! 
 In other words, your software is now ready to be used by other users.
