ref and reformating

--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -40,7 +40,7 @@ We have all been in a situation during a project where we tell ourselves: "I wis
 
 This first part of the workflow will span over three chapters: 
 
-+ UX Matters (\\@ref(#matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application. 
++ UX Matters (\@ref(#matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application. 
 This chapter will cover the importance of simplicity when creating web applications, the danger of trying to implement too much components (aka "feature creep"), and finally we will introduce some general rules about Web Accessibility. 
 These topics are vast topics, and a lot of literature and online resources exists for all these subjects: further readings and resources are linked inside each section. 
 
