--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -196,7 +196,7 @@ code_coverage <- covr::package_coverage()
 
 For example, figure \@ref(fig:10-step-by-step-build-11) is the output of running the `package_coverage()` function on the `{golem}` package on the 2020-04-29 on the `dev` branch: 
 
-```{r 10-step-by-step-build-11, echo=FALSE, fig.cap="`{golem` code coverage results", out.width="100%"}
+```{r 10-step-by-step-build-11, echo=FALSE, fig.cap="{golem} code coverage results", out.width="100%"}
 knitr::include_graphics("img/golemcov.png")
 ```
 
