--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -527,7 +527,7 @@ dockerstats_recurse(
 )
 ```
 
-Figure \@ref(11-step-by-step-secure-30) is what both these processes look side to side.
+Figure \@ref(fig:11-step-by-step-secure-30) is what both these processes look side to side.
 
 (ref:dockerstatscap) `{dockerstats}` and `shinycannon` running side-by-side at the same time.
 
