--- a/index.Rmd
+++ b/index.Rmd
@@ -31,7 +31,8 @@ options(
   width = 55, 
   digits = 4, 
   conflicts.policy = FALSE,
-  dplyr.summarise.inform = FALSE
+  dplyr.summarise.inform = FALSE,
+  width = 60
 )
 ```
 
