correct name for tibble

--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -216,7 +216,7 @@ To sum up: do not set an arbitrary code coverage percentage goal, but rather use
 With CodeCov, you can get a timeline of the evolution of code coverage: a good tool for judging when you need to write more tests. 
 For example, figure \@ref(fig:10-step-by-step-build-13) is the general tendency for the code coverage of the `{tibble}` package over the last 6 months (November 2019 - April 2020): 
 
-```{r 10-step-by-step-build-13, echo=FALSE, fig.cap="CodeCov.io results for the `{tibble` package", out.width="100%"}
+```{r 10-step-by-step-build-13, echo=FALSE, fig.cap="CodeCov.io results for the {tibble} package", out.width="100%"}
 knitr::include_graphics("img/codecov-tibble.png")
 ```
 
