Fixe cross-references

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -110,7 +110,7 @@ Oh, and it would also be nice if people could get a `tar.gz` and install it on t
 When adopting the package structure, you can use classical tools to locally install your `{shiny}` application, _i.e_ as any other R package, built as a `tar.gz`.
 On a server, be it RStudio products or as Docker containers, the package infrastructure will also allow to leverage the native R tools to build, install and launch R code. 
 
-More about this in chapter \@ref(#deploy-golem).
+More about this in chapter \@ref(deploy-golem).
 
 #### `{shiny}` app as a Package, a checklist {-}
 
