--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -883,7 +883,7 @@ shinyApp(ui, server)
 ```
 
 + Both these functions take a `jQuery` selector to select the element in the UI. 
-We will introduce these selectors in chapter \@ref(#optimjs).
+We will introduce these selectors in chapter \@ref(optimjs).
 
 ### Too Much Data in Memory
 
