--- a/index.Rmd
+++ b/index.Rmd
@@ -72,10 +72,10 @@ The content of this book oscillates between conceptual discussions (e.g. what is
 This book will then be of interest for two groups: 
 
 + Team manager who want to help organizing work, and `{shiny}` developers who want to learn about project management. 
-This group will find relevant content in the first 1/3 of this book (roughly until chapter \@ref(#workflow)).
+This group will find relevant content in the first 1/3 of this book (roughly until chapter \@ref(workflow)).
 
 + Developers who want to cover medium to advanced `{shiny}` topics that will be relevant to production.
-This group will be more interested in the rest of the book, that roughly spans from chapter \@ref(#matters) to the end.
+This group will be more interested in the rest of the book, that roughly spans from chapter \@ref(matters) to the end.
 Note that the technical elements covered in this book range from intermediate to advanced topics, and we hope that you will find relevant topics for your current goals, whatever your level is.
 
 In practice, we've come to realize that a lot of `{shiny}` projects are built by small team, with a large proportion of these "team" being composed of only one developer. 
