--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -822,7 +822,7 @@ On the other hand, the front-end might change: new colors, new graphic designs, 
 Whenever this happens, you will be happy you have separated the business logic from the application logic, as you will have to change less code.
 
 How to do that?
-Add you application logic inside a file (typically, a module), and the business logic in another R script (typically starting with `fct_` or `utils_`).
+Add your application logic inside a file (typically, a module), and the business logic in another R script (typically starting with `fct_` or `utils_`).
 You can even write the business logic inside another package, making these functions really reusable outside your application.
 
 ### Small is beautiful (bis repetita)
