added steps to appendix

--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -130,6 +130,8 @@ He studied web development at the university, where he learned about minificatio
 He is now also in charge of training new recruits for the company he works at, and also gives some lecture to the university he went to. 
 Most of the minification he does is automated, but he is looking for a tool he can use during trainings and classes to explain how minification works.
 
+This step is available at [github.com/ColinFay/minifying/step-1-design](https://github.com/ColinFay/minifying/tree/master/step-1-design).
+
 ## Step 2: Prototyping {-}
 
 In this step, we will be building the back-end of the application on one side, and the UI on the other side. 
@@ -184,6 +186,7 @@ guess_minifier <- function(file){
   )
   
 }
+options(width = 10)
 # minifyr comes with a series of examples, so we can use them as tests
 guess_minifier(
   minifyr_example("css")
@@ -292,6 +295,9 @@ There are not that much text displayed on the screen, so this font should work w
 We then used CSS to arrange our page: size, padding, alignment, colors...
 If you want to know more about this file, it's located in the `inst/app/www` folder of the package.
 
+This step is available at [github.com/ColinFay/minifying/step-2-prototype](https://github.com/ColinFay/minifying/tree/master/step-2-prototype).
+
+
 ## Step 3: Build {-}
 
 Now we've got the backend in an Rmd, the front end working with `{shinipsum}`, now is the time to make the two work together!
@@ -310,6 +316,8 @@ Here is the logic we will be adding to the application:
 
 During this process, we will migrate the functions from the Rmd to their own files, use external dependencies, and document our business logic functions. 
 You can refer to the `dev/02_dev.R` file if you want to read the exact steps taken here.
+
+This step is available at [github.com/ColinFay/minifying/step-3-build](https://github.com/ColinFay/minifying/tree/master/step-3-build).
 
 ## Step 4: Strengthen {-}
 
@@ -377,6 +385,8 @@ It's safer to wrap these tests between `if(interactive())`, as running the check
 And on top of that, running these inside you CI might cause some pain, and of course if will not work on CRAN checks.
 
 We'll also be building "standard" function checks, which you can find in the `test/` folder.
+
+This step is available at [github.com/ColinFay/minifying/step-4-strengthen](https://github.com/ColinFay/minifying/tree/master/step-4-strengthen).
 
 ## Step 5: Deploy {-}
 
@@ -452,3 +462,4 @@ We can try it with:
 docker run -p 2811:80 minifying
 ```
 
+This step is available at [github.com/ColinFay/minifying/step-5-deploy](https://github.com/ColinFay/minifying/tree/master/step-5-deploy).
