--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -1,6 +1,6 @@
 # (PART)  Appendix {-}
 
-# Use case - Building an App, from Start to Finish (#usecase) {-}
+# Use case - Building an App, from Start to Finish {#usecase} {-}
 
 This chapter aims at exemplifying the workflow developed in this book using a "real life" example. 
 In this appendix, we will be building a `{shiny}` application from start to finish. 
